[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "mistralai>=1.6.0",
    "newsapi-python>=0.2.7",
    "openai>=1.74.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
